[package]
name = "punch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
iroh = { version = "0.35.0", features = ["discovery-local-network"] }
n0-future = "0.1.3"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-splice = { version = "0.2.1", optional = true }
facet = "0.27.12"
facet-toml = "0.25.13"

[features]
default = []
splice = ["tokio-splice"]
