[package]
name = "punch"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/cestef/punch"
homepage = "https://github.com/cestef/punch"
description = "Simple and fast peer-to-peer tunneling tool"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
iroh = { version = "0.35.0", features = ["discovery-local-network"] }
n0-future = "0.1.3"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
dirs = "6.0.0"
rand = "0.8"
owo-colors = { version = "4.2.1", features = ["supports-colors"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
miette = { version = "7.6.0", features = ["fancy"] }
inquire = "0.7.5"
dashmap = "6.1.0"
bytes = "1.10.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
